# gildea-intelligence

./: .env.example  .gitignore  README.md  pyproject.toml
src/gildea_intelligence/: __init__.py  agent.py  evaluator.py  llm.py  orchestrator.py  scratchpad.py
src/gildea_intelligence/chains/: synthesizer.py
src/gildea_intelligence/output/: markdown.py
src/gildea_intelligence/workers/: analyzer.py  retriever.py  timeline.py
