[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gildea-intelligence"
version = "0.1.0"
description = "AI market intelligence reports powered by verified expert analysis"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Holly Jones"}]
readme = "README.md"
keywords = ["ai", "market-intelligence", "thesis-validation", "competitive-intelligence", "reports"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40",
    "gildea>=0.1.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
vertex = ["anthropic[vertex]>=0.40"]

[project.urls]
Homepage = "https://gildea.ai"
Documentation = "https://docs.gildea.ai"
Repository = "https://github.com/hjones20/gildea-intelligence"
Issues = "https://github.com/hjones20/gildea-intelligence/issues"

[project.scripts]
gildea-report = "gildea_intelligence.agent:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gildea_intelligence"]

[tool.ruff]
target-version = "py310"
